--- a/.github/workflows/simple_copy.yml
+++ b/.github/workflows/simple_copy.yml
@@ -15,5 +15,5 @@ jobs:
       - name: python Commands
         run:
           import platform
-          print(platform.processor)
+          print(platform.processor())
         shell: python
