--- a/.github/workflows/simple_copy.yml
+++ b/.github/workflows/simple_copy.yml
@@ -13,7 +13,7 @@ jobs:
           node -v 
           npm -v
       - name: python Commands
-        run:
+        run: |
           import platform
           print(platform.processor())
         shell: python
