--- a/.github/workflows/simple_copy.yml
+++ b/.github/workflows/simple_copy.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   run-shell-command:
-    runs-on: macos-latest
+    runs-on: macos-lates
     steps:
       - name: echo a string
         run: echo
@@ -17,3 +17,11 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+  run-windows-commands:
+    runs-on: windows-latest
+    steps:
+      - name: Directory PowerShell
+        run: Get-Location
+      - name: Directory Bash
+        run: pwd
+        shell: bash
