--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,6 +7,10 @@
     run-github-actions:
         runs-on: ubuntu-latest
         steps:
+            -  name: List Files
+               run: |
+                  pwd
+                  ls
             -  name: Simple JS Action
                id: greet # Id of the step
                uses: actions/hello-world-javascript-action@v1
@@ -14,4 +18,4 @@
                with:
                  who-to-greet: John
             -  name: Log Greeting Time
-               run: echo "${{steps.greet.outputs.time}}" # here we get na access to the list of steps 
+               run: echo "${{steps.greet.outputs.time}}" # here we get na access to the list of steps
