--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,13 @@
             -  name: List Files
                run: |
                   pwd
-                  ls
+                  ls -a
+            -  name: Chewckout
+               uses: actions/checkout@v1
+            -  name: List Files
+               run: |
+                  pwd
+                  ls -a   
             -  name: Simple JS Action
                id: greet # Id of the step
                uses: actions/hello-world-javascript-action@v1
