--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,11 @@
 
   name: Actions Workflow
 
-  on: [push, pull_request]
+#   on: [push, pull_request,pull ]
+  on: 
+    push:
+    pull_request:
+      types: [closed, assigned, opened, reopened]
 
   jobs:
     run-github-actions:
