--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,9 +2,16 @@
   name: Actions Workflow
 
 #   on: [push, pull_request,pull ]
+#   on: 
+#     push:
+#     pull_request:
+#       types: [closed, assigned, opened, reopened]
+
   on: 
-    push:
-    pull_request:
+    schedule:
+      - cron: "0/5 * * * *"
+      - cron: "0/6 * * * *"
+   pull_request:
       types: [closed, assigned, opened, reopened]
 
   jobs:
