--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,9 +7,9 @@ name: Actions Workflow
 #       types: [closed, assigned, opened, reopened]
 
 on: 
-   schedule:
-    - cron: "0/5 * * * *"
-    - cron: "0/6 * * * *"
+   # schedule:
+   #  - cron: "0/5 * * * *"
+   #  - cron: "0/6 * * * *"
    pull_request:
       types: [closed, assigned, opened, reopened]
 
