--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -17,12 +17,12 @@ jobs:
         run: |
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
-          echo "STEP_ENV: ${STEP§_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
       - name: Log ENV 2
         run: |
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
-          echo "STEP_ENV: ${STEP§_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
   log-default-env:
     runs-on: ubuntu-latest
     steps:
