add_create_issue_joib

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -3,7 +3,9 @@ name: ENV Variables
 on: push
 
 env:
-  WF_ENV: Available to all jobs
+  # WF_ENV: Available to all jobs
+  # WF_ENV: ${{secrets.WF_ENV}} # custom secret that was added in fithub progect settings
+  WF_ENV: ${{secrets.GITHUB_TOKEN}} # token to use github API or 
 
 jobs:
   log-env:
