--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -15,11 +15,10 @@ jobs:
     steps: 
       - name: Push a random file
         run: |
-          pwd
-          ls -a
+          pwd 
+          ls -a 
           git init
-          # git remote add origin "https://github.com/tut195/github_actions_test.git"
-          git remote add origin "https://$GITGIB_ACTOR:${{secrets.GITHUB_TOKEN}}@github.com/$GITHUB_REPOSITORY.git"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git config --global user.email "my-bot@bot.com"
           git config --global user.name "my-bot"
           git fetch
@@ -28,9 +27,11 @@ jobs:
           git pull
           ls -a
           echo $RANDOM >> random.txt
+          ls -a 
           git add -A
           git commit -m"Random file"
           git push
+
       - name: Create issue using REST API
         run: |
           curl --request POST \
