--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,16 +8,16 @@ env:
   WF_ENV: ${{secrets.GITHUB_TOKEN}} # token to use github API or 
 
 jobs:
-  decript:
+  decrypt:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Decript file
-        run: gpg --quiet --batch --yes --dectypt --passfrase="$PASSPHARASE" --output $HOME/secrets.json secrets.json.gpg
-        env:
-          PASSPHARASE: ${{secrets.PASSPHRASE}}
-      - name: Print our file connectec
-        run: cat $HOME/secret.json  
+      - name: Decrypt
+        run: gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpg
+        env: 
+          PASSPHRASE: ${{ secrets.PASSPHRASE }}
+      - name: Print our file content 
+        run: cat $HOME/secret.json
   create_issue:
     runs-on: ubuntu-latest
     permissions:
