--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -1,5 +1,5 @@
 name: Context testing
-on: push
+on: [push, pull_request]
 
 jobs:
   functions:
@@ -14,12 +14,15 @@ jobs:
 
   dump_contexts_to_log:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo '$GITHUB_CONTEXT'
+        run: eccho '$GITHUB_CONTEXT'
       - name: Dump job context
+        # will wun next job event if previous will failure
+        if: failure()  
         env:
           JOB_CONTEXT: ${{ toJson(job) }}
         run: echo '$JOB_CONTEXT'
@@ -28,6 +31,7 @@ jobs:
           STEPS_CONTEXT: ${{ toJson(steps) }}
         run: echo '$STEPS_CONTEXT'
       - name: Dump runner context
+        if: always()
         env:
           RUNNER_CONTEXT: ${{ toJson(runner) }}
         run: echo '$RUNNER_CONTEXT'
