--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -11,6 +11,7 @@ jobs:
         include: 
           - os: ubuntu-latest
             node_version: 4
+            is_ubuntu_8: "true"
         exclude:
           - os: ubuntu-latest
             node_version: 6
@@ -20,6 +21,8 @@ jobs:
     #   fail-fast: true # optional
       max-parallel: 2
     runs-on: ${{ matrix.os }}
+    env:
+      IS_UBUNTU_8: ${{ matrix.is_ubuntu_8 }}
     steps:
       - name: Log node version
         run: node -v
@@ -28,7 +31,9 @@ jobs:
         #   node-version: 6
           node-version: ${{ matrix.node_version }}
       - name: Log node version
-        run: node -v    
+        run: | 
+          node -v
+          echo $IS_UBUNTU_8 
 
     
 
